Added cat image and a few elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
 <h1>Heading</h1>
 <p>paragraph</p>
 <a href="https://google.com" target="_blank" title="Let's go to Google">Link</a>
+<img src="https://images.unsplash.com/photo-1557312309-a08700b45135?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTR8MTM5Mzg2fHxlbnwwfHx8fHw%3D" alt="cat">
